# zero2prod

./: Cargo.toml
scripts/: first_migration.sh  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
